# pdf-informazioni-statistiche

./: .gitignore  README.md  pyproject.toml
src/: main.py
